<resources>
    <string name="login_to_personal_account">Вход в личный кабинет</string>
    <string name="work_search">Поиск работы</string>
    <string name="email">Электронная почта</string>
    <string name="continue_str">Продолжить</string>
    <string name="password_entry">Войти с паролем</string>
    <string name="worker_search">Поиск сотрудников</string>
    <string name="vacancy_holding">Размещение вакансий и доступ к базе резюме</string>
    <string name="i_search_workers">Я ищу сотрудников</string>
    <string name="incorrect_email">Вы ввели неверный e-mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sent_code_on">Отправили код на %s</string>
    <string name="write_code">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="confirm">Подтвердить</string>
    <string name="star">*</string>
</resources>