<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sentCodeOnTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sent_code_on"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textSize="20sp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/writeCodeTextView"/>

    <TextView
        android:id="@+id/writeCodeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/write_code"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/sentCodeOnTextView"
        app:layout_constraintEnd_toEndOf="@id/sentCodeOnTextView"
        app:layout_constraintTop_toBottomOf="@id/sentCodeOnTextView"
        app:layout_constraintBottom_toTopOf="@id/inputPasswordLinearLayout"/>
    
    <LinearLayout
        android:id="@+id/inputPasswordLinearLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/writeCodeTextView"
        app:layout_constraintStart_toStartOf="@id/writeCodeTextView"
        app:layout_constraintEnd_toEndOf="@id/writeCodeTextView"
        app:layout_constraintBottom_toTopOf="@id/confirmButton">


    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_enabled_background"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputPasswordLinearLayout"
        app:layout_constraintStart_toStartOf="@id/inputPasswordLinearLayout"
        app:layout_constraintEnd_toEndOf="@id/inputPasswordLinearLayout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
